--- a/resources/css/templates/hero/hero.less
+++ b/resources/css/templates/hero/hero.less
@@ -158,10 +158,10 @@
 .bg-pattern {
   background: url("../imgs/page-pattern.png") no-repeat;
   display: block;
-  width: 100%;
-  height: 1000px;
+  width: 50%;
+  height: 100%;
   position: absolute;
   top: 0;
-  left: 40%;
+  right: 0;
   z-index: -1;
 }
